--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         </select>
                     </div>
                     <div>
-                        <textarea name="message" placeholder="Your Message" rows="4" required
+                        <textarea name="message" placeholder="Phone Number followed by Your Message" rows="4" required
                                   class="w-full px-4 py-2 rounded-lg border focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
                     </div>
                     <button type="submit" 
