--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </div>
     </nav>
 
+
     <!-- Hero Section -->
     <section id="home" class="bg-gray-50 py-20">
         <div class="max-w-6xl mx-auto px-4">
@@ -75,7 +76,21 @@
         </ul>
     </div>
       
-  
+    <!-- Video Section -->
+    <section id="video" class="py-16 bg-gray-100">
+        <div class="max-w-6xl mx-auto px-4">
+            <h2 class="text-3xl font-bold text-center mb-8 brand-blue">Watch Our Latest Video</h2>
+            <div class="flex justify-center">
+                <iframe width="560" height="315" 
+                    src="https://www.youtube.com/embed/nDAGImBveuQ?si=d3zFX-T3nY8EJuo_" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </section>  
 
     <!-- Destinations Section -->
     <section id="destinations" class="py-16">
