--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- Video Section -->
     <section id="video" class="py-16 bg-gray-100">
         <div class="max-w-6xl mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-8 brand-blue">Watch Our Latest Video</h2>
+            <h2 class="text-3xl font-bold text-center mb-8 brand-blue">Recent Success Stories</h2>
             <div class="flex justify-center">
                 <iframe width="560" height="315" 
                     src="https://www.youtube.com/embed/nDAGImBveuQ?si=d3zFX-T3nY8EJuo_" 
